# voxlet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark.xml
benchmarks/: CMakeLists.txt
benchmarks/containers/src/: string.cpp
cmake/: dependencies.cmake  renderer.cmake  turbolin.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
engine/: CMakeLists.txt
engine/include/voxlet/: application.hpp  core.hpp  enumDispatcher.hpp  error.hpp  instance.cpp  instance.hpp  logger.hpp  memory.hpp  object.hpp  result.hpp  test.hpp  typeTraits.hpp  types.hpp  units.hpp  utils.hpp
engine/include/voxlet/containers/: string.hpp  string.inl  stringAccumulator.hpp  stringAccumulator.inl  stringSlice.hpp
engine/include/voxlet/containers/views/: checkedContiguousIterator.hpp  stringSlice.hpp  stringSlice.inl  uncheckedContiguousIterator.hpp  uncheckedStringSlice.hpp  uncheckedStringSlice.inl
engine/include/voxlet/data/: database.hpp
engine/include/voxlet/graphics/: buffer.hpp  context.hpp  memoryBuffer.hpp  objectView.hpp  pipeline.hpp  shaderModule.hpp  window.hpp
engine/include/voxlet/graphics/opengl/: buffer.hpp  function.hpp  pipeline.hpp  shaderModule.hpp
engine/src/: instance.cpp  logger.cpp  test.cpp  tests.cpp  utils.cpp
engine/src/data/: database.cpp
engine/src/graphics/: buffer.cpp  context.cpp  window.cpp
engine/src/graphics/opengl/: buffer.cpp  pipeline.cpp  shaderModule.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
scripts/python/: generate_graph_from_benchmark.py
tests/: CMakeLists.txt
tests/containers/src/: string.cpp
vendors/glad/: CMakeLists.txt
